poc/tests/errors/test_FplVariableAlreadyDeclared_class_04.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            Nat(ab, cd: Int)
            {
                x: Nat
                x: Nat
                self := x
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:10:17: The name 'x' was already declared in the current context at (9,17)